--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -4,4 +4,5 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 # We need to keep version 5.2.1 because is the one used on the Jenkins server
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.2.1-all.zip
+# TODO update jenkins job to use gradle wrapper
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.6.1-all.zip
