--- a/3ds2/build.gradle
+++ b/3ds2/build.gradle
@@ -34,18 +34,15 @@ android {
 dependencies {
     //Tests
     testImplementation "junit:junit:$junit_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation "androidx.test.ext:junit:$test_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     // Checkout
     api project(':base-v3')
 
     // Dependencies
+    // TODO update 3DS2 SDK but pass 2.1.0 protocol version in component
     api "com.adyen.threeds:adyen-3ds2:$adyen3ds2_version"
-    // TODO check if excludes are necessary
-//    implementation("com.adyen.threeds:adyen-3ds2:0.9.6") {
-//        exclude group: 'com.android.support', module: 'appcompat-v7'
-//    }
 }
 
 // This release.gradle script is applied at the end of this build.gradle script,
