--- a/bcmc-ui/build.gradle
+++ b/bcmc-ui/build.gradle
@@ -30,15 +30,15 @@ android {
 dependencies {
     //Tests
     testImplementation "junit:junit:$junit_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation "androidx.test.ext:junit:$test_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     // Checkout
     api project(":card-ui-core")
     api project(":bcmc-base")
 
     // Dependencies
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation "com.google.android.material:material:$material_version"
 }
 
 // This sharedTasks.gradle script is applied at the end of this build.gradle script,
