--- a/core-v3/build.gradle
+++ b/core-v3/build.gradle
@@ -23,7 +23,6 @@ android {
         versionName version_name
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-
     }
 }
 
@@ -31,11 +30,11 @@ dependencies {
     //Tests
     testImplementation "junit:junit:$junit_version"
     testImplementation "org.json:json:$json_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation "androidx.test.ext:junit:$test_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     // Dependencies
-    api 'androidx.annotation:annotation:1.0.0'
+    api "androidx.annotation:annotation:$annotation_version"
 }
 
 // This sharedTasks.gradle script is applied at the end of this build.gradle script,
