--- a/googlepay-base/build.gradle
+++ b/googlepay-base/build.gradle
@@ -30,16 +30,14 @@ android {
 dependencies {
     //Tests
     testImplementation "junit:junit:$junit_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation "androidx.test.ext:junit:$test_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     // Checkout
     api project(':base-v3')
 
     // Dependencies
 
-    // Keeping this version of Play Services until we can safely move to AndroidX libraries.
-    //noinspection GradleDependency
     implementation "com.google.android.gms:play-services-wallet:$play_services_wallet_version"
 }
 
