--- a/redirect/build.gradle
+++ b/redirect/build.gradle
@@ -32,14 +32,14 @@ android {
 dependencies {
     //Tests
     testImplementation "junit:junit:$junit_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation "androidx.test.ext:junit:$test_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     // Checkout
     api project(":base-ui")
 
     // Dependencies
-    implementation 'androidx.browser:browser:1.0.0'
+    implementation "androidx.browser:browser:$browser_version"
 }
 
 // This sharedTasks.gradle script is applied at the end of this build.gradle script,
