--- a/drop-in/build.gradle
+++ b/drop-in/build.gradle
@@ -71,7 +71,7 @@ dependencies {
 
 //    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
 //    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+//    implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
 
 }
