--- a/config/gradle/checksums.gradle
+++ b/config/gradle/checksums.gradle
@@ -9,6 +9,7 @@
 if (!hasProperty("checksums")) {
     final checksums = [
             "com.adyen.cse:adyen-cse:1.0.5:6ddf508e1dc2ce2f2a77a7c7b392dc60:MD5",
+            "com.adyen.threeds:adyen-3ds2:2.2.0:42314ec7f7f54b5fd9a77c12e59ae78d:MD5",
 
             "androidx.annotation:annotation:1.1.0:959a76b836fff5d8cd80877c2626b79f:MD5",
             "androidx.fragment:fragment:1.2.5:209dbc6d8aa197581acc1c564170a09c:MD5",
@@ -19,7 +20,7 @@ if (!hasProperty("checksums")) {
 
             "com.google.android.material:material:1.2.1:6411dc90c9afe66ab7f7e471d9d51311:MD5",
             "com.google.android.gms:play-services-wallet:18.0.0:46b17d3f75af7085556c305e659c030a:MD5",
-            
+
             "org.jetbrains.kotlin:kotlin-android-extensions-runtime:1.4.0:2c04202b9d08416592e61c409d44e6c6:MD5",
             "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.0:4f83ac99c7802491f8077650bc8ffe5e:MD5",
             "org.jetbrains.kotlin:kotlin-compiler-embeddable:1.4.0:4c32059e8d5e4e1928854f2a3f240310:MD5",
