--- a/drop-in/build.gradle
+++ b/drop-in/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     api project(":wechatpay-base")
 
     // Dependencies
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_stdlib_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "com.google.android.material:material:$material_version"
 
