--- a/example-app/build.gradle
+++ b/example-app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
 
     // Dependencies
     implementation "androidx.multidex:multidex:$multidex_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_stdlib_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_version"
 
