--- a/build.gradle
+++ b/build.gradle
@@ -80,9 +80,9 @@ allprojects {
     ext.preference_version = "1.1.1"
     ext.koin_version = "2.0.1"
     ext.retrofit2_version = '2.9.0'
-//    ext.moshi_converter_version = "2.4.0"
     ext.coroutines_adapter_version = "0.9.2"
     ext.moshi_adapters_version = "1.10.0"
+    ext.moshi_kotlin_adapter_version = "1.9.3"
     ext.okhttp_logging_version = "4.9.0"
     ext.okhttp_idling_resource_version = "1.0.0"
 
