--- a/example-app/build.gradle
+++ b/example-app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
     implementation "com.squareup.moshi:moshi-adapters:$moshi_adapters_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_kotlin_adapter_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$coroutines_adapter_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_version"
     implementation "org.koin:koin-android:$koin_version"
