Enable Kotlin on all modules

--- a/await-base/build.gradle
+++ b/await-base/build.gradle
@@ -11,6 +11,7 @@ ext.mavenArtifactName = "Adyen checkout await-base component"
 ext.mavenArtifactDescription = "Adyen checkout await-base component client for Adyen's Checkout API."
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion compile_sdk_version
