--- a/3ds2/build.gradle
+++ b/3ds2/build.gradle
@@ -12,6 +12,7 @@ ext.mavenArtifactName = "Adyen checkout 3DS2 component"
 ext.mavenArtifactDescription = "Adyen Checkout 3DS2 component client for Adyen's Checkout API."
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion compile_sdk_version
