--- a/afterpay-ui/build.gradle
+++ b/afterpay-ui/build.gradle
@@ -12,6 +12,7 @@ ext.mavenArtifactName = "Adyen checkout afterpay-ui component"
 ext.mavenArtifactDescription = "Adyen checkout afterpay-ui component client for Adyen's Checkout API."
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion compile_sdk_version
