--- a/await-ui/build.gradle
+++ b/await-ui/build.gradle
@@ -3,6 +3,7 @@ ext.mavenArtifactName = "Adyen checkout await-ui component"
 ext.mavenArtifactDescription = "Adyen checkout await-ui component client for Adyen's Checkout API."
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion compile_sdk_version
