--- a/mbway-base/build.gradle
+++ b/mbway-base/build.gradle
@@ -3,6 +3,7 @@ ext.mavenArtifactName = "Adyen checkout mbway-base component"
 ext.mavenArtifactDescription = "Adyen checkout mbway-base component client for Adyen's Checkout API."
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion compile_sdk_version
