--- a/redirect/build.gradle
+++ b/redirect/build.gradle
@@ -12,6 +12,7 @@ ext.mavenArtifactName = "Adyen checkout redirect component"
 ext.mavenArtifactDescription = "Adyen checkout redirect component client for Adyen's Checkout API."
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion compile_sdk_version
