--- a/sepa-ui/build.gradle
+++ b/sepa-ui/build.gradle
@@ -12,6 +12,7 @@ ext.mavenArtifactName = "Adyen checkout sepa-ui component"
 ext.mavenArtifactDescription = "Adyen checkout sepa-ui component client for Adyen's Checkout API."
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion compile_sdk_version
